Bug 1098958 - Call UpdateImageContainer whenever we send invalidations in RasterImage. r=tn

--HG--
extra : rebase_source : 06226edca355e318d442dbf4410a722f0d1e0d1b